--- a/app/404.html
+++ b/app/404.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300,500;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
@@ -177,15 +178,6 @@
 										</ul>
 									</div>
 								</div>
-
-
-
-
-
-
-
-
-
 								<a class="header__btn header__btn-login header__btn-login--off" href="#">Login</a>
 								<a class="header__btn header__btn-logout header__btn-register--on" href="#">Logout</a>
 								<a class="header__btn header__btn-register header__btn-login--off" href="#">Register</a>
@@ -264,8 +256,6 @@
 
 
 
-			
-
 			<section class="search page-search" style="background-image: url(../images/search-bg.jpg);">
 				<div class="contaner">
 					<div class="search__inner">
@@ -284,18 +274,36 @@
 				</div>
 			</section>
 
-
-
 			<div class="breadcrumbs">
 				<div class="container">
 					<div class="breadcrumbs__inner">
 						<ul class="breadcrumbs__list">
 							<li><a href="#">Home</a></li>
-							<li><a href="#">Product Page</a></li>
+							<li><a href="#"><span>404 Page</span></a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
+
+
+			<div class="page-404">
+				<div class="container">
+					<div class="page-404__wrapper">
+						<div class="page-404__head">
+							Error Page
+						</div>
+						<div class="page-404__inner">
+							<div class="page-404__404">404</div>
+							<div class="page-404__title">Sorry Page Was Not Found</div>
+							<div class="page-404__text">The page you are looking is not available or has been removed.
+								Try going to Home Page by using the button below.</div>
+							<a href="#" class="page-404__link">Go To Home Page</a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
 
 
 
