--- a/app/about.html
+++ b/app/about.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300,500;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
@@ -177,15 +178,6 @@
 										</ul>
 									</div>
 								</div>
-
-
-
-
-
-
-
-
-
 								<a class="header__btn header__btn-login header__btn-login--off" href="#">Login</a>
 								<a class="header__btn header__btn-logout header__btn-register--on" href="#">Logout</a>
 								<a class="header__btn header__btn-register header__btn-login--off" href="#">Register</a>
@@ -264,8 +256,6 @@
 
 
 
-			
-
 			<section class="search page-search" style="background-image: url(../images/search-bg.jpg);">
 				<div class="contaner">
 					<div class="search__inner">
@@ -284,18 +274,47 @@
 				</div>
 			</section>
 
-
-
 			<div class="breadcrumbs">
 				<div class="container">
 					<div class="breadcrumbs__inner">
 						<ul class="breadcrumbs__list">
 							<li><a href="#">Home</a></li>
-							<li><a href="#">Product Page</a></li>
+							<li><a href="#"><span>About us</span></a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
+
+
+			<div class="page-404">
+				<div class="container">
+					<div class="about__wrapper">
+						<div class="about__head">
+							To Know Who We Are
+						</div>
+						<div class="about__inner">
+							<div class="about__box">
+								<h3>What We Do</h3>
+								<p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centurbut a vfrrdyrtfglso survived  
+									but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the releas survived not  raseth
+									leap into electronic typesetting, remaining essentially unchanged. when an unknown printer took a galley of type and scrambled it to make a type specimen 
+									book. It has survived not only five centurbut a vfrrdyrtfglso survived  but also the leap into electronic typesetting, remaining essentially unchanged. It was po
+									pularised in the 1960s with the releas survived not  rasethleap into electronic typesetting, remaining essentially unchanged. </p>
+							</div>
+							<div class="about__box">
+								<h3>Our Mission</h3>
+								<p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centurbut a vfrrdyrtfglso survived  
+									but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the releas survived not  raseth
+									leap into electronic typesetting, remaining essentially unchanged. when an unknown printer took a galley of type and scrambled it to make a type specimen 
+									book. It has survived not only five centurbut a vfrrdyrtfglso survived  but also the leap into electronic typesetting, remaining essentially unchanged. It was po
+									pularised in the 1960s with the releas survived not  rasethleap into electronic typesetting, remaining essentially unchanged. </p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
 
 
 
@@ -376,12 +395,6 @@
 				</div>
 			</div>
 		</footer>
-
-
-
-
-
-
 	</div>
 
 
