--- a/app/new-item.html
+++ b/app/new-item.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300,500;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
@@ -140,7 +140,7 @@
 
 			<section class="product-page">
 				<div class="container">
-					<div class="produck-page__inner">
+					<div class="product-page__inner">
 						<aside class="product-page__aside">
 							<div class="category aside__item">
 								<div class="aside__title">
