--- a/app/product-one.html
+++ b/app/product-one.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300,500;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
@@ -301,7 +301,7 @@
 							<div class="product-one__title">
 								GTBuilder - Construction & Building WordPress Theme
 							</div>
-							<p class="product-one__text">
+							<p> class="product-one__text">
 								Bmply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
 								dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
 								a type specimen book. It has survived noning essentially unchanged.
@@ -377,6 +377,8 @@
 									</div>
 								</div>
 							</div>
+
+
 							<div class="product-one__more">
 								<div class="product-one__more-title">
 									More Product by PsdBosS
@@ -391,16 +393,6 @@
 										</div>
 									</div>
 
-									<div class="product-one__more-icons">
-										<div class="product-one__more-icon productmini">
-											<div class="productmini__images" style="background-image: url(images/content/mini.jpg);"></div>
-											<div class="productmini__info">
-												<div class="productmini__name">Grand Ballet - Dance</div>
-												<div class="productmini__theme">PSD Template</div>
-												<div class="productmini__price">$12</div>
-											</div>
-										</div>
-									</div>
 
 									<div class="product-one__more-icons">
 										<div class="product-one__more-icon productmini">
@@ -412,6 +404,19 @@
 											</div>
 										</div>
 									</div>
+
+
+									<div class="product-one__more-icons">
+										<div class="product-one__more-icon productmini">
+											<div class="productmini__images" style="background-image: url(images/content/mini.jpg);"></div>
+											<div class="productmini__info">
+												<div class="productmini__name">Grand Ballet - Dance</div>
+												<div class="productmini__theme">PSD Template</div>
+												<div class="productmini__price">$12</div>
+											</div>
+										</div>
+									</div>
+
 
 									<div class="product-one__more-icons">
 										<div class="product-one__more-icon productmini">
@@ -424,6 +429,7 @@
 										</div>
 									</div>
 
+
 									<div class="product-one__more-icons">
 										<div class="product-one__more-icon productmini">
 											<div class="productmini__images" style="background-image: url(images/content/mini.jpg);"></div>
@@ -434,6 +440,7 @@
 											</div>
 										</div>
 									</div>
+
 
 									<div class="product-one__more-icons">
 										<div class="product-one__more-icon productmini">
@@ -446,15 +453,86 @@
 										</div>
 									</div>
 								</div>
-
-
-							</div>
-							<div class="product-one__aside">
-
 							</div>
 						</div>
+
+						<aside class="product-one__aside">
+							<div class="aside__item product__price">
+								<div class="aside__title">
+									Product Price
+								</div>
+								<div class="price__box">
+									<div class="price__product">$59.00</div>
+									<form>
+										<select>
+											<option>regular</option>
+											<option>premium</option>
+										</select>
+									</form>
+								</div>
+								<button class="icon-shopping-cart">Add To Cart</button>
+								<button class="icon-heart-o">Add To Favourites</button>
+								<button >Buy Now</button>
+							</div>
+							<div class="aside__item">
+								<div class="aside__title">
+									Product Author
+								</div>
+								<div class="product__author-box">
+									<div class="author__avatar">
+										<img src="images/content/avatar.jpg" alt="">
+									</div>
+									<div class="author__info">
+										<div class="author__name">PsdBoss</div>
+										<a href="#" class="author__info-link">View Profile</a>
+									</div>
+								</div>
+										<ul class="author__awards-list">
+											<li class="icon-meh-o"></li>
+											<li class="icon-pagelines"></li>
+											<li class="icon-bolt"></li>
+											<li class="icon-foursquare"></li>
+											<li class="icon-yen"></li>
+										</ul>
+							</div>
+							<div class="aside__item sales-number">
+								<div class="aside__item-sales">
+									<span>05</span> Sales
+								</div>
+							</div>
+							<div class="aside__item">
+								<div class="aside__title">
+									Product Information
+								</div>
+								<div class="information__line">
+									<span>Released On:</span>1 January, 2016
+								</div>
+								<div class="information__line">
+									<span>Last Update:</span>20 April, 2016
+								</div>
+								<div class="information__line">
+									<span>Download:</span> 613
+								</div>
+								<div class="information__line">
+									<span>Version:</span> 1.1
+								</div>
+								<div class="information__line">
+									<span>Compatibility:</span>Wordpress 4+
+								</div>
+								<div class="information__line">
+									<span>Compatible Browsers:</span>IE9, IE10, IE11, Firefox, Safari,
+									Opera, Chrome
+								</div>
+							</div>
+						</aside>
 					</div>
+				</div>
 			</section>
+
+
+
+
+
 
 
 		</div>
